# lobstr-code

./: .gitignore  .travis.yml  AUTHORS  CNAME  ChangeLog  HACKING.md  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  allelotype-validation-suite.html  ax_check_rinside.m4  best-practices-alignment.html  best-practices-allelotyper.html  best-practices-bwamem.html  best-practices-custom-noise-model.html  best-practices-custom-reference.html  best-practices-filtering.html  best-practices-multi-sample-calling.html  best-practices-wgs-wes.html  best-practices-ystr-codis.html  changelog.html  config.h  config.h.in  config.status  configure  configure.ac  contact-us.html  documentation.html  download.html  faq.html  file-formats.html  filter-lobstr-vcfs.html  index.html  install.html  install.sh  lobSTR.rb  (+15 more)
_includes/: footer.html  header.html  header.html~  menu.html  menu.html~
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  output.6  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
config/: ar-lib  compile  gen-coverage-report.sh  rebuild-coverage.sh  test-driver
data/: analyze_strs.R  codis.bed  marshfield_cap_vs_lobstr_calls.tab  marshfield_cap_vs_lobstr_readme.txt  marshfield_marker_corrections.tab  mismatched_product_sizes.tab  yDatabase.csv  (+6 more)
m4/: Makefile  Makefile.am  Makefile.in  ax_blas.m4
models/: Makefile.am  illumina.noisemodel.txt  illumina2.stepmodel  illumina2.stuttermodel  illumina2.stutterproblem  illumina3.stepmodel  illumina3.stuttermodel  illumina3.stutterproblem  illumina_v2.0.3.stepmodel  illumina_v2.0.3.stuttermodel
scripts/: #lobstr_to_vcf.py#  #plotAllelotypes.txt#  --consensus.header.vcf  --consensus.vcf  5013.dnd  5013.fa  GenerateLobSTRRefBed.py  GetSTRInfo.py  Makefile.am  allelotype_validation_suite.sh  checks_utils.py  checks_utils.py~  consensus.py  consensus.py~  consensus_graph.py  consensus_graph.py~  convertBam.py  debug_cons.txt  debug_homozygous.txt  genotyper_utils.py  getYsearchLink.py  illumina.noisemodel.txt  lobSTR_alignment_checks.py  lobSTR_alignment_checks.py~  lobSTR_allelotype.py  lobSTR_allelotype.py~  lobSTR_allelotype_checks.py  lobSTR_allelotype_checks.py~  lobSTR_annotate_allele_freqs.py  lobSTR_capillary_comparator.py  lobSTR_download_ref_hg19.sh  lobSTR_filter_vcf.py  lobSTR_genotype.py  lobSTR_test_run.sh  lobSTR_vcf_to_tab.py  lobstr_index.py  lobstr_index_071512.py  lobstr_to_vcf.py  lobstr_to_vcf.py~  nw.py  (+20 more)
scripts/misc/: genotype.py  test_model.txt
scripts/statsmodels/: api.py  api.py~  version.py
scripts/statsmodels/datasets/anes96/: data.py
scripts/statsmodels/datasets/scotland/: data.py
scripts/statsmodels/discrete/: .#discrete_model.py
src/: AlignedRead.h  Alignment.h  AlignmentFileReader.cpp  AlignmentFileReader.h  AlignmentFilters.cpp  AlignmentFilters.h  AlignmentUtils.cpp  AlignmentUtils.h  Anonymizer.cpp  Anonymizer.h  AnonymizerMultiThreadData.cpp  AnonymizerMultiThreadData.h  BWAReadAligner.cpp  BWAReadAligner.h  BamFileReader.cpp  BamFileReader.h  BamPairedFileReader.cpp  BamPairedFileReader.h  CachedWindowGenerator.cpp  CachedWindowGenerator.h  DebugSatellite.cpp  DebugSatellite.h  EntropyDetection.cpp  EntropyDetection.h  FFT_four_nuc_vectors.cpp  FFT_four_nuc_vectors.h  FFT_nuc_vectors.cpp  FFT_nuc_vectors.h  FastaFileReader.cpp  FastaFileReader.h  FastaPairedFileReader.cpp  FastaPairedFileReader.h  FastqFileReader.cpp  FastqFileReader.h  FastqPairedFileReader.cpp  FastqPairedFileReader.h  FilterCounter.cpp  FilterCounter.h  GST.cpp  GST.h  (+120 more)
src/api/: BamAlignment.h  BamAux.h  BamReader.cpp  BamReader.h  BamWriter.h  api_global.h
src/api/internal/: BamMultiReader_p.cpp  BgzfStream_p.cpp  BgzfStream_p.h
src/shared/: bamtools_global.h
src/tests/: AlignmentFilters_test.cpp  AlignmentFilters_test.h  AlignmentUtils_test.cpp  AlignmentUtils_test.h  BWAReadAligner_test.cpp  BWAReadAligner_test.cpp~  BWAReadAligner_test.h  DNATools.cpp  DNATools.h  NWNoRefEndPenalty_test.cpp  NWNoRefEndPenalty_test.h  ReadContainer_test.cpp  ReadContainer_test.h  RemoveDuplicates_test.cpp  RemoveDuplicates_test.h  VCFWriter_test.cpp  VCFWriter_test.h  ZAlgorithm_test.cpp  ZAlgorithm_test.h  common_test.cpp  common_test.cpp~  common_test.h  common_test.h~  gsl_test.cpp  logistic_regression_test.cpp  logistic_regression_test.h  main_test.cpp  main_test.cpp~
src/utils/: bamtools_utilities.h
tests/: Makefile.am  command_line_tests.sh  dummy_test.sh  runtest.sh  small.fq  test.aligned.sorted.bam  test.aligned.sorted.bam.bai  test.chrY.aligned.sorted.bam  test.chrY.aligned.sorted.bam.bai  test.noindex.bam  test.norg.bam  test.norg.bam.bai  test.nosample.bam  test_chrY.bam.bai  tiny.fq  tmp_1.fa  tmp_2.fa
tests/smallref/: lobstr_test_ref.bed  readme.txt  smallref_strinfo.tab
tests/smallref/small_lobstr_ref/: lobSTR_A.fa  lobSTR_A.fa.amb  lobSTR_A.fa.ann  lobSTR_A.fa.bwt  lobSTR_A.fa.pac  lobSTR_A.fa.rbwt  lobSTR_A.fa.rpac  lobSTR_A.fa.rsa  lobSTR_A.fa.sa  lobSTR_AAAAAC.fa  lobSTR_AAAAAC.fa.amb  lobSTR_AAAAAC.fa.ann  lobSTR_AAAAAC.fa.bwt  lobSTR_AAAAAC.fa.pac  lobSTR_AAAAAC.fa.rbwt  lobSTR_AAAAAC.fa.rpac  lobSTR_AAAAAC.fa.rsa  lobSTR_AAAAAC.fa.sa  lobSTR_AAAAC.fa  lobSTR_AAAAC.fa.amb  lobSTR_AAAAC.fa.ann  lobSTR_AAAAC.fa.bwt  lobSTR_AAAAC.fa.pac  lobSTR_AAAAC.fa.rbwt  lobSTR_AAAAC.fa.rpac  lobSTR_AAAAC.fa.rsa  lobSTR_AAAAC.fa.sa  lobSTR_AAAC.fa  lobSTR_AAAC.fa.amb  lobSTR_AAAC.fa.ann  lobSTR_AAAC.fa.bwt  lobSTR_AAAC.fa.pac  lobSTR_AAAC.fa.rbwt  lobSTR_AAAC.fa.rpac  lobSTR_AAAC.fa.rsa  lobSTR_AAAC.fa.sa  lobSTR_AAAT.fa  lobSTR_AAAT.fa.amb  lobSTR_AAAT.fa.ann  lobSTR_AAAT.fa.bwt  (+25 more)
tests/smallref/small_lobstr_ref_v2/: lobSTR_chromsizes.tab  lobSTR_mergedref.bed  lobSTR_ref.fasta  lobSTR_ref.fasta.amb  lobSTR_ref.fasta.ann  lobSTR_ref.fasta.bwt  lobSTR_ref.fasta.pac  lobSTR_ref.fasta.rbwt  lobSTR_ref.fasta.rpac  lobSTR_ref.fasta.rsa  lobSTR_ref.fasta.sa  lobSTR_ref_map.tab
tests/smallref_chrY/: bad_strinfo_file.tab  smallref_chrY.strinfo.tab  smallref_chrY_ref.bed
tests/smallref_chrY/small_lobstr_ref_v2_chrY/: lobSTR_ref_map.tab
(+12 files in other folders)
