# Copyright (C) 2014 Assaf Gordon <agordon@wi.mit.edu>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

##
## These files will be installed in the "/usr/share/APPNAME/models" directory.
##
modeldir = $(pkgdatadir)/models

dist_model_DATA = \
	illumina_v2.0.3.stepmodel \
	illumina_v2.0.3.stuttermodel \
	illumina_v2.0.3.stutterproblem

EXTRA_DIST = $(dist_model_DATA)

